make ci build faster (#1283)
* make ci build faster